--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-  <!DOCTYPE html>
+<!DOCTYPE html>
   <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -29,7 +29,69 @@
     </section>
   </div>
   <main class="project-title">
-  
+   <a href="https://olgabak.github.io/open-tribute-page/" target="_blank">
+    <img src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wCEAAoHCBUVFRgVFRUYGBgYHBgYGBgYGhoaGhgaGBgaGhgaGBgcIS4lHB4rIRgYJ
+    jgmKy8xNTU1GiQ7QDs0Py40NTEBDAwMEA8QHxISHjQrISs0NDQ0NDQ0NDQ0NDQ0MTQ0NDQ0NDQ0NDQ0NDQ0NDQ0NDQ0NDU0NDQ0NDQ0NDQ0NDQ0Mf/
+    AABEIAQkAvgMBIgACEQEDEQH/xAAcAAABBAMBAAAAAAAAAAAAAAACAAEDBgQFBwj/xABFEAACAQIEAwUFBQYEAwkBAAABAgADEQQSITEFQVEGYXGB8AcikbHBEz
+    JCgqEUUnKS4fEkYsLRY3OiIzM0NUOjsrPiFv/EABkBAAMBAQEAAAAAAAAAAAAAAAABAgMEBf/EACIRAQEAAgMAAgIDAQAAAAAAAAABAhEDITESQTJRBCKBE//
+    aAAwDAQACEQMRAD8A6lAMcGMTIUYxo8YwBCPeDeLNACvBLQSY14AYMeQVq6IpZ2CqNSSbASs9oO1601K0FZnOzMpCC/TMPePhtziyymPpzG1bHqKoLMQoGp
+    JNgPOYq8Xw7bVkPgwnLq3GcTiRleqxUclA18bDWTcKpF2N7lRsR61/rOfPn141x4d+umpj6bGwcfL5zKXWUdARoD5EejG/aHXVSVYb2Nv6ESMf5V+4vLg/
+    VXvLBYSs4DtQo92tp/mA+Yljp11dQykEHYj4TpwzmXjnyxuPpyYgYjEJsgQMIGCIQiArxrxWjQBExjHtBMYOY0V4rzNZGDCjGMBMGPHtABiEcia3je
+    LNOmSpsxuAemh1k55STYk3dKn2t4qXqvRBsiWBBtZmyhibjU2uBbrK5jaA0FzcC5HIMf6W/WNUqLcC7M2pZiTubX5/XlCoAO9zv08es4M87bt2YY6mk
+    3CqNl0Qt8NOtzymYtUJoMgvutgT/MDE4IsiLe4vfztoOsE8Oc2IvryPyke+tNaTNiM3cRy2+BEkXGEjXfr1EwfsWU2sb7fX6COyMB3yTBiWsx8bfD+k
+    3XBuMPRyLmumcBlO4DEDQ8gPpK7iAxBuLbfp6PwkoJFwddt5thlce4yyxl6ddVbwsk0XZXibVEyPqyWynmVtpfqRLBO7HL5T
+    cceWPxuqjAhiIxpeyPGvGMExkcmMTGMUZGigx7zNZ7xGNeNGCMUUUAUr3as6IO9vlp9ZYTKd21xJz06Y6FifE6fL9ZjzfhWnH+UVjH4TUFLa7+I
+    3mRwrhrsOVyfRMJhmbXz6Hv7pZeEIqjT1/tOLG/Tq13tn8K4OiKARflczZjhaEbTKwyiwmSJ044TTPLO7at+Eofwj4TVYzgag3AFudpabyCqIZceNgx5MtueY7
+    A5GtzsfDSx+v6TXvS3PP1b6y58Wwga56a/7XtylQxnutv4985rLOm25e2b2bxwp1VU21IHS178/h8J0UGcmoECojn95Semh2+c6uBOrgvVcvNOxXjRRjOhiYmNF
+    EJUpaLLFaLNGJjIJjGERGtM1hMQiMaPZCERjgR7QAJTO2WEJrU3W9ypv+Qj4aGXUianj+Ez0yQPeQMR3ad3lM+XHeNXhdZKHnsfnLHwZ7gDr8pVFxHv6m5vrYct5bez9P
+    3jfQggW6XtOGY6rtncWmjXAGxNt7CZNHEBuoPQ7zWYng5q6Go6p+6ugJ1+9+9vsbjTrDp4UU2UKxIFhbSw0toAPOdUuUkrGzHK2NjXrqu58hqfITGfEgi+Vh4gfKQ4iiWY
+    jMy3tqNNByPOx7rTFpcCKOXWs+VvvJe6aX2XYb3v973Rra4JbldlJMdMDi9Yi2th1+Up+Me7efdLrx1AEPPbu+EpOKQZr6a6/Sc2X5N9dbT4GlnqU0tfMy/MTqd5QOydENVV
+    jrlJsO8qdZfROngnVcnNf7CjGKKdDIJEVocUZAtGyySPaGwjIg2hwbSFAIitDyxERgMRMREEw2D3jWiUQssCc27W8EOGd6q5sjkkZRmyHoend4SwcFOemtUaFr3XmraXX6+
+    BEtZUEWIuDoQdjNVSwaUc6oBZ2zWOyDKBdbDe6gEc7jvmGfFPW/Hy2dVtMDVuusgqP74voL6f16Q8IPd0Nprq3GkVsr03BHUDXoRY2Ik76krWY25X4xnJUBc21A30NvI85k
+    13ss1LcdQWVabkk2AAXU8hqfrNgyFgL6X5frHvq6Fxss+U00uPpmpcD5XlBR/taoVAbs2RFGxANtT13J85c+KdoKdAsis/2hVrIqE3BAysXOiqCGvu21h113s64DZBXqe9Y
+    laQZbEWJBc9SdhJx45e08nLrpZ+CcHGHXVszWAv07hNqIJMcGdUxmM1HLbbd0d49oF44MYHFGigDxRo8ZAMUTGDeSZzGMbNHvAEYBEMxjAGWFeNGvGBEwSoO4vMDHcaw1DWt
+    Xpp3O6gnwF7mVniXtNwSXFMPWb/IuRf53tp4Aw9C4M2UnodvHpJloq4BKg9L8vCcbb2gYjEYmgSgRFfJ9nTJYuKhCHMT95he6gAa+M6lhKjjRT5GYZT45d+OjC/LHq9xsP2R
+    E1VQD15/GRV62lgddh9TIquZr3bQdO+NRpgHTYbyLd+NNfdu3L/aTUajiqLoRmCZhcXF0c/eU6EG5BB3Gk6R2Y4rSxGHSpSGUG4dNLo+7qbd5uOoII0M4x294sMRi6jIbo
+    lqaG9wQhOZvN2bytMPs12mr4Fy9MqQwAem98jgG42OjDWzcrnedeGH9Z+3Hnl/avRJilM7P+0XCYiyOf2eobe7UIyE9FqbH82UnpLkDFrRbPCEG8cGBjEeDHEZHiIitF
+    AAYQDJGMAyNmG8e8AmK8YHeMTGEaFCsdte1qYFFCqHqvcohNlVRoXcjW19ANyb9DOUcZ7YYzEk56zIh/BSuieZBzN5kyTtvj/2jHVmBuqN9kvctP3D/wBQc/mletNM
+    cekWnY9Bvv3yO8kBvAa15eijYcDpZq9FbE3q0RZWyk3qJs/4Tbny0neuGoRZTcEXX3jdha4IZuZ035zgvCnyujEKQro1m0U2cEhiNh1PKehsPhgrEKFC5nIy6j3jfT4/G
+    85ubHdjfhvqWpR37xr5ESvduuMDDYVyps5AVP4m0GnxPgDLK6/IzintK4t9riBQU+7RvnPWoQLj8o93xZ5GGO8tNM8tY7Ul77eiTBYaQ2GsF52uIxlh7PdssXg7Kj56Y/
+    8ASqXZAOic0/KbdxlfURZfXdCzZ7dw4F7R8JXstU/s7nk5Bpk/5ag0H5ssuaMCLggg6gjUHwnl4aTb9n+0uKwbf9g5C31pvdqbdfc/Ce9bGRcP0cyejRClR7IdtqWOJplTS
+    rAZshOZWHMo2l7cwQCL895a7ydaVsd4iYMYxAxMEmGVglJCkZiAhlY1o9gwkOKrhEd22RWc+Cgk/KZAml7aPlwGKP8Awag/mUr9YBwF3JJZt294+J1MYju/pBc66Q1Ok3
+    jKgItAIhk6xgYURk4Y3NgPrPTPDStWmlQNmzqpzBcoPugGynbbaeaeHpd0HV0FuuZgJ6V4RgVp0URS2VFyi5vp585OU2cy00nbrjQwWGeopBqN7lNTsXcNYkX2UKzHrlt
+    znn1mJJJOYkkljuxOpJPMk3l09qvGFrYv7FSSmGGQkm+eppnPSy2C9xD9ZSrx446GWVqNhIrayYmR9ZaV17A9kTic2Iqqv2CBgge9qtVRcBgLE0l/Ebi5GUX96229o3Yy
+    lRQ4nDqECfZrWpDRffOValIEkgF/dKnmL9Sc32eVf2jBphmJC0atU1Mj5DkZGZFZlcVED1Kv3kFiKbAm1wV7UeL0koDDUwq1azK2IUEMyKjGoquVO+bLlvyBsLEWnfZ/
+    TlQHK3f6/WE3um0dRbXeQsT4Sks3hXEGoVUrLfNTdXHeF+8vmtx4Ez0mjhgGGxAI8CLieZGQga/pPRPZquXweGc7tQok+JRb/rIyVGyLR80ExryVsoiAYmaATMdqOYJE
+    e8UAa0rvbw2wGJ/g+brLETK52+/8vxNv3AfIOpP6AysfSrgmU3HnJQ0hVtYe83jOmEcxytvrFGbY8DX/ABGHB51qA+NVBad87Q8cGDwT19MyqFpg7NUfRAR0ubnuUzg
+    fBmtXw/X7ej/9qS0e0jjxrVKeGB92gMz22NRxp4lUPxdhyi+9FpSKlzckkk6knUkm5JJ5kkk+cEk8pJGVPXjGSMITz+A7usB0trf9N9bSd7+Pr18JG9zr6JjCG1/l+t7
+    fpDpkKDoNBe39oary9d8Cp0EAPNoPXjGVdYRTb1vAAt1iBPvPQPYw/wCAwv8Ayaf/AMZ5/wCk9Bdj0tgML/yKR+KA/WTkcbgwYRgmSpM0EwjBMxawgY8G8e8IVKaP
+    tmmbA4of8Gof5UJ+k3d5i8Rph6VRDsyOp8CpEqJrzTfWTJIEOgPcD+kkHr6zeM6mZukYKZHcyRDGaahiCjK67oyuv8SkMv6jrIQ7ElmJLMSWJOpJNySepOsTWyn16
+    /pEPh3QAiZKvr14SEb/AAkp08fl32gkFQnb4yMw2EYD4QBiwAkCnMbdPXyk9XQfSY2G5n102gf0yI5EZPXlHIhCpqjWF+4mejuEUMmHop+5Spp/Kij6Tzm1MvZBuxC
+    jxY2HznpY6aDYafCTmeJGBFeKZrTEwCYopm0NGjmDAj3lf7a8bXC4Wo5IzsClNersCAfAC7HuE315w/2ncTarjnT8FEKijlcgO58yQPyCXjN1NVRW5ad0MNIR6+E
+    INNozsTA+vnHU3v8AKCBGDeEZHLe6TfrCptf5xW90jugUD+kD+mQo6+jDuJFc8oVxbWBHqLfQcusAxwxtBqPGEWIcbQFIyi3MSBjcySmmo6DWI9ajKR9LQg1hIwbQxqYyZ/
+    AaOfFYdBrmrUh5faKSfgDPQ7ThPYWnm4hhh0Z2/kp1GHyE7raZZ3tWJooo0jax3jExiY15CzkxrxRjAg1qiqpZiAqgkk7AAXJPdPPHafHpXxVarTzZHe6XFiRYC9jtcgm3f
+    O5dqMM1TCYhEPvNScDvOUkDztbznnhjfWa4RNPcEQQwvBc6RgTNEspX5RleAhtGub29etI06ZOcEaiQ0nsLfr69axwwtvIqbanaFEZitEW5SHbnAR9bxjTKc2HrpMWvU0sPC
+    TZ7yGqusVEQ0ucyFPd68JEm/r1/aTE6bQkGSQWt37wlIMADleGp0lJXD2XUs2Pv+5RqP+qJ/rM7OROWeyDDXrYipbRaaID/ABuzEf8AtidTmGfrTHwJEGGTAMlRRjCI
+    jTPbQ0GHAjSEqDv5zzhxDCmlVqU7fcd0/kcqPlPSNp567UIyYvEI+rCq58Q7l1PmrAzTD1NadxIr690nc6W6yBkM1qZThocAHlrFmHOECemQYGIWxBHO0CnUsb7jnJ6zZ
+    l/WP2J8qH7T1685IHuNNZii3OTLWXofKKU6mBkTVfKJqgIgIATrtGDo4uZMr6eEYUx0+ESmxsdutoeFvaQEyRDIctuvcZkYXDNUdKai7uyon8TkKt/Mxk7P7LcB9ngRUI96u
+    7VPyCyL5HIW/PLiTIsFhFo0kor92mqIvgihQT36SQzDK7rWQJgmEYJiAzGIhmCZk0CRGIhmCZRGnKva5wgq9PFoNHApv3MtyjHxW4/IJ1a0rPtGwrPw+uFFymVz/CjqzEeC
+    hpeN1UZOCoReSNIjp4zKwWEeq4SmjO7bIgLNv0HLv5TZnYwSdY+QTfcU7J4iguaoEDAAmmHVqgB11Vbgaa7zD4lgkporIxYkDMDa3vXItsQbEDLY7Mb6Qnc3DvVkrXNSj02K
+    +HSEpiYXG+sAhqWOohJbpebTGVqLUURKYDixdrLm5gre1zte9zv5Lg/Zi0NdjfSHJ/f+knpLYaDziWmdPp/tCRDzlSJtEsCswJsB/eIxKnPnAQ9FLaSy+z+qqcQw5YAgs6i/
+    4WdGVG+JA85XWOnl/vCwWK+zqJUF/cdHA/gYN/pivmjn7emjGhA31HOIic9aoyIJkhEAxBIYMUUlZRrR4oyprTE4rhhUoVaZ2em6H8yEfWZoEjqKSpHUEfpK
+    ia8wIBoTz+s7P2TWmmFw64P7MVK4Ges4Ju6DNVDagkqMwVdhbY214pY7HcafDSdh9n1DJg0IqBszM2SwzIXC7d2h87+AOa349L4ZvLSxY3BJUTLUCOWC5ywIDMuuhGoF
+    ydNiND0lT4l7P0qEuAad8zEoSwJY3+6xNhz0tvOgYTDAqGbfmP68zMrE4hEyq2gYhQdhc7A9Cdh3zDH5Sb3p15Y4261txDH9hGVC9GqtQjU0yuR7D903IY/CRVewuJp4Z8
+    TUAUoMxpbvl/EzEGykA3troDex0nYE4ai185OjWHcp7vGbnKosCAVNww6qwKm/kZrhnlfay5eLCfjPp5iKwwvX1vNp2h4QcLiamHO1NiFb95T7yNfndGW/eDNYJ149uCiS
+    PbfWRO4WQtXjtKSpiBtHZgNreR+UwzVP94r98navimaoSf7QWOhAHX5QR4RidxaBvT3CHLYeix3NOmT4lFJmWZg8Da+GoHrSpH/oWZ4E56uBtBIkkAsItGwcLiSzNfYT
+    JWqp2MrVLHZAbc+cKhxEKCOs4sOfXrpy4/0stxCErScUJYdBNhS4oLagzbHnxvtZ5ceUbcTB4rxFMPSetVbKiC56k7BVHNibADvmO3FO7xnH+23aapj6y0qQJpIwWmg1NR2O
+    UPbncmyjoe+bYZY5+VnljZ6rnGcd+0VnrZEp52LZEACr/ueZPMkmdJ7E4KtR+ycUQiCmBULgo7MzFgy394gZ2FiFHMEzO7LdiaWFKtWUVsQLG26UjuLcri49466aAS0YlFN1
+    ckk7IDYHXn3XO5k8ucs1HRwcOr8smr412jNCpTXIDTqfednC21UWW4szWLHLcEhTa5m0oDMr0Kpzj3gDf7yXtv1U6X/hO8gZSjGmykoRdSuYOgBsS1h7ozKba8u4gZFakCoUmx
+    3p1FtuB+Hv3up0IvuCZl3Pf9dEk9l3L4lo6hqTn3lFwx/ED91/G41HI9xE03abtYmHoXa+c6BRuxHId02DVHdbgBaqXHcf/wANp4eInJfaTj6FevTakTcJlqKb3Rg59xgfxCx
+    vbul8c+WWp4z5r8cd/bRcS4q2JqtUdVUnku3fc8yd+/U9TMB62mkiCWMF52zqajz73d0ixMbKecKIX+MAECGFHrSK0UZCEYrp8YwmXw7BtWqpSXd2VAegJ1PkLnyitkm6Hoj
+    s9iVOGw9tvsqVv5Fme+KUc5pcPUREVE0VFVFHQKAB+ggPjB4zyr/KrrnDG3bGDYTFq1GOxtMBax3I0ktGrpvMsv5GV9XOOTxqfsxeOR0EmbeIbzJttHTSZtNDzkSzJXaIVX+
+    2uJanhKhSwJyoWJtZXYK1u+xt5znHZZsOMSjYp2SknvXQNcupBRboMyi4vcdNxe8vXtJ/8IP40+s5Ws9T+JjP+f8Ari5r/Z3r/wDocIaYqriaaI3IOufXWz31Vu61xNZhO12
+    HrM9Ok6IqDMz1DbNqQcgb3nOmpNgLjecaG/rujvsfEfWXeKNJz5dOhca9oAokphm+0OxdjddNLjr5ad8ptftVi3dXNUgq2dcoAAa1ibc9CRryJmobeZFLeaY8eLK82eX3pda/
+    tMxJNNkpU1dFZXY5mFS9re6MuUDU7nffrSsXXZ3d3N2dmdiBa7OSx0GwuTpJ63KQVPveZ+c0mMx8Z5Z5Ze1iuIyrMkfQ/Ix1jTtAUgFTM0b+YkdXYeH1MYY4BhgQ/XyhQCLLLF
+    2Ho/4kPvkRmHibKP0YzT1dz5/Myw9hP++f+D/VM+brjquP8ovy1SYSV7byFd4NTaeJY9FljFxv2ozAXaEI/jA//9k=">Tribute Page</a>
+
   </main>
 </body>
-
