--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css"></link>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="fontawesome.css">
+  <link rel="stylesheet" href="brands.css">
+  <link rel="stylesheet" href="solid.css">
   <title>Portfolio</title>
 </head>
 <body>
@@ -16,19 +19,22 @@
     </ul>
   </nav>
   </header>
-  <div class="name">
+  <div class="name" id="About">
     <section id="welcome-section">
       <h1>Hey I am Olga</h1>
     </section>
     <section id="profession">
       <h3>a web developer</h3>
-  </div>
-  <div class="projects">
-    <section id="header">
-      <h2>These are some of my projects</h2>
     </section>
   </div>
+  <div class="projects" id="Work">
+    <section id="presentation">
+      <h2>These are some of my projects</h2>
+    </section>
+        <div class="divider"></div>
+  </div>
   <main class="project-title">
+  <div class="tribute-page">
    <a href="https://olgabak.github.io/open-tribute-page/" target="_blank">
     <img src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wCEAAoHCBUVFRgVFRUYGBgYHBgYGBgYGhoaGhgaGBgaGhgaGBgcIS4lHB4rIRgYJ
     jgmKy8xNTU1GiQ7QDs0Py40NTEBDAwMEA8QHxISHjQrISs0NDQ0NDQ0NDQ0NDQ0MTQ0NDQ0NDQ0NDQ0NDQ0NDQ0NDQ0NDU0NDQ0NDQ0NDQ0NDQ0Mf/
@@ -91,13 +97,59 @@
     2uJanhKhSwJyoWJtZXYK1u+xt5znHZZsOMSjYp2SknvXQNcupBRboMyi4vcdNxe8vXtJ/8IP40+s5Ws9T+JjP+f8Ari5r/Z3r/wDocIaYqriaaI3IOufXWz31Vu61xNZhO12
     HrM9Ok6IqDMz1DbNqQcgb3nOmpNgLjecaG/rujvsfEfWXeKNJz5dOhca9oAokphm+0OxdjddNLjr5ad8ptftVi3dXNUgq2dcoAAa1ibc9CRryJmobeZFLeaY8eLK82eX3pda/
     tMxJNNkpU1dFZXY5mFS9re6MuUDU7nffrSsXXZ3d3N2dmdiBa7OSx0GwuTpJ63KQVPveZ+c0mMx8Z5Z5Ze1iuIyrMkfQ/Ix1jTtAUgFTM0b+YkdXYeH1MYY4BhgQ/XyhQCLLLF
-    2Ho/4kPvkRmHibKP0YzT1dz5/Myw9hP++f+D/VM+brjquP8ovy1SYSV7byFd4NTaeJY9FljFxv2ozAXaEI/jA//9k=" class="wiki-img">Tribute Page</a>
-    
-    <a href="https://olgabak.github.io/open-technical-documentation-page/" target="_blank"><img src="Book-Python.jpg" class="book-img" height="384">Technical Documentation Page</a>
-    <a href="https://olgabak.github.io/open-product-landing-page/" target="_blank"><img src="Product-Page.jpg" class="product-img" height="384">Product Landing Page</a>
+    2Ho/4kPvkRmHibKP0YzT1dz5/Myw9hP++f+D/VM+brjquP8ovy1SYSV7byFd4NTaeJY9FljFxv2ozAXaEI/jA//9k=" class="wiki-img"></a>
+   <div class="four">
+      <p><a href="https://olgabak.github.io/open-tribute-page/" target="_blank">Tribute Page</a></p>
+   </div>
+  </div>
 
-  </main>
-</body>
 
-  </main>
+<div class="technical-documentation-page">
+    <a href="https://olgabak.github.io/open-technical-documentation-page/" target="_blank"><img src="Book-Python.jpg" class="book-img"></a>
+      <div class="three">
+        <p><a href="https://olgabak.github.io/open-technical-documentation-page/" target="_blank">Technical Documentation Page</a>
+        </p>
+      </div>
+ </div>
+ <div class="product-landing-page">
+    <a href="https://olgabak.github.io/open-product-landing-page/" target="_blank"><img src="Product-Page.jpg" class="product-img"></a>
+      <div class="two">
+        <p><a href="https://olgabak.github.io/open-product-landing-page/" target="_blank">Product Landing Page</a></p>
+      </div>
+ </div>
+ <div></div>
+<div class="one">
+  <p>Show all ></p>
+</div>
+</main>
+<div class="communication">
+  <div class="public-address" id="Contact">
+    <h1>Let's work together...</h1>
+    <h3>How do you take your coffee?</h3>
+  </div>
+    <div class="social-icons">
+      <div class="github">
+        <a href="https://github.com/OlgAbak" target="_blank">
+         <span style="font-size: 1.5em; color: white;">
+           <i class="fa-brands fa-github-square"></i>GitHub
+         </span>
+        </a>
+      </div>
+      <div class="email">
+        <a href="mailto:olabtrans@aol.com">
+         <span style="font-size: 1.5em; color: white;">
+         <i class="fa-regular fa-envelope"></i>Send a mail
+         </span>
+       </a>
+      </div>
+    </div>
+     <div class="dividing-strip">
+     </div>
+      <div class="copyright">
+        <span style="color: white; padding-right: 40px;">
+          <i class="fa-solid fa-copyright"></i>
+            Olga Abakumova, 2024</span>
+      </div>
+</div>
 </body>
+</html>
