--- a/index.html
+++ b/index.html
@@ -131,14 +131,16 @@
       <div class="github">
         <a href="https://github.com/OlgAbak" target="_blank">
          <span style="font-size: 1.5em; color: white;">
-           <i class="fa-brands fa-github-square"></i><span><span<span><span>GitHub</span></span></span></span>
+           <i class="fa-brands fa-github-square"></i><span><span<span><span><span><span<span><span>
+             GitHub</span></span></span></span></span></span></span></span>
          </span>
         </a>
       </div>
       <div class="email">
         <a href="mailto:olabtrans@aol.com">
          <span style="font-size: 1.5em; color: white;">
-         <i class="fa-regular fa-envelope"></i><span><span><span><span>Send a mail</span></span></span></span>
+         <i class="fa-regular fa-envelope"></i><span><span><span><span<span><span><span><span>
+           Send a mail</span></span></span></span></span></span></span></span>
          </span>
        </a>
       </div>
