--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                       href="file:///C:/Users/olgaa/OneDrive/Web%20Development/FCC/Javascript/JSProjects/Pokemon%20Search%20Project/PokemonSearch.html"
                       target="_blank">
                         <img
-                            src="file:///C:\Users\olgaa\OneDrive\Изображения\Screenshots\Pokemon_Search.png" 
+                            src="Pokemon_Search.png" 
                             width="280"
                             height="350"
                             class="card-img-top"
@@ -92,7 +92,7 @@
                       href="file:///C:/Users/olgaa/OneDrive/Web%20Development/FCC/Javascript/JSProjects/Cash%20Registr%20Project/CashRegister.html"
                       target="_blank">
                         <img
-                            src="file:///C:\Users\olgaa\OneDrive\Изображения\Screenshots\Cash_Register.png" 
+                            src="Cash_Register.png" 
                             width="280"
                             height="350"
                             class="card-img-top"
@@ -117,7 +117,7 @@
                      href="file:///C:/Users/olgaa/OneDrive/Web%20Development/FCC/Javascript/JSProjects/Roman%20Numeral%20Converter/RomNumConv.html"
                      target="_blank">
                         <img 
-                            src="file:///C:\Users\olgaa\OneDrive\Изображения\Screenshots\Roman_Num_Conv.png" 
+                            src="Roman_Num_Conv.png" 
                             width="280"
                             height="350"
                             class="card-img-top"
@@ -141,7 +141,7 @@
           </div>
 
           <div class="d-grid mx-auto my-auto justify-content-center">
-            <a class="btn btn-primary" href="file://C:\Users\olgaa\Documents\Web Development\Web-site\Olga_Abakumova_more_projects_1.html">
+            <a class="btn btn-primary" href="more-projects-one.html">
               Show more
             </a>
           </div> 
