--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <li class="list-group-item">
                     <div class="card" style="width:14rem;">
                       <a class="card-link"
-                      href="file:///C:/Users/olgaa/OneDrive/Web%20Development/FCC/Javascript/JSProjects/Pokemon%20Search%20Project/PokemonSearch.html"
+                      href="https://olgabak.github.io/open-pokemon-search-app/"
                       target="_blank">
                         <img
                             src="Pokemon_Search.png" 
@@ -77,7 +77,7 @@
                       <div class="card-body">
                         <h6 class="card-title">
                           <p>
-                            <a href="file:///C:/Users/olgaa/OneDrive/Web%20Development/FCC/Javascript/JSProjects/Pokemon%20Search%20Project/PokemonSearch.html"
+                            <a href="https://olgabak.github.io/open-pokemon-search-app/"
                             target="_blank"
                             class="card-link">
                             Pokemon Search Page
@@ -89,7 +89,7 @@
                 <li class="list-group-item">
                     <div class="card" style="width:14rem;">
                       <a class="card-link"
-                      href="file:///C:/Users/olgaa/OneDrive/Web%20Development/FCC/Javascript/JSProjects/Cash%20Registr%20Project/CashRegister.html"
+                      href="https://olgabak.github.io/open-cash-register/"
                       target="_blank">
                         <img
                             src="Cash_Register.png" 
@@ -101,7 +101,7 @@
                       <div class="card-body">
                         <h6 class="card-title">
                           <p>
-                            <a href="file:///C:/Users/olgaa/OneDrive/Web%20Development/FCC/Javascript/JSProjects/Cash%20Registr%20Project/CashRegister.html"
+                            <a href="https://olgabak.github.io/open-cash-register/"
                             target="_blank"
                             class="card-link">
                             Cash Register Page
@@ -114,7 +114,7 @@
                  <li class="list-group-item">
                    <div class="card" style="width:14rem;">
                      <a class="card-link"
-                     href="file:///C:/Users/olgaa/OneDrive/Web%20Development/FCC/Javascript/JSProjects/Roman%20Numeral%20Converter/RomNumConv.html"
+                     href="https://olgabak.github.io/open-roman-number-converter/"
                      target="_blank">
                         <img 
                             src="Roman_Num_Conv.png" 
@@ -126,7 +126,7 @@
                     <div class="card-body">
                         <h6 class="card-title">
                           <p>
-                            <a href="file:///C:/Users/olgaa/OneDrive/Web%20Development/FCC/Javascript/JSProjects/Roman%20Numeral%20Converter/RomNumConv.html"
+                            <a href="https://olgabak.github.io/open-roman-number-converter/"
                             target="_blank"
                             class="card-link">
                             Roman Numeral Converter Page
