--- a/more-projects-one.html
+++ b/more-projects-one.html
@@ -14,10 +14,10 @@
           <li class="list-group-item">
             <div class="card" style="width:14rem;">
               <a class="card-link"
-              href="file:///file:///C:/Users/olgaa/OneDrive/Web%20Development/FCC/Javascript/JSProjects/Telephone%20Number%20Validator/Validator.html"
+              href="https://olgabak.github.io/open-telephone-number-validator/"
               target="_blank">
                 <img 
-                  src="file:///C:\Users\olgaa\OneDrive\Изображения\Screenshots\Phone_Number_Validator.png" 
+                  src="Phone_Number_Validator.png" 
                   width="280"
                   height="350"
                   class="card-img-top"
@@ -26,7 +26,7 @@
               <div class="card-body">
                 <h6 class="card-title">
                   <p>
-                    <a href="file:///C:/Users/olgaa/OneDrive/Web%20Development/FCC/Javascript/JSProjects/Telephone%20Number%20Validator/Validator.html"
+                    <a href="https://olgabak.github.io/open-telephone-number-validator/"
                     target="_blank"
                     class="card-link">
                     USA Phone Number Validator Page
@@ -39,10 +39,10 @@
           <li class="list-group-item">
             <div class="card" style="width:14rem;">
               <a class="card-link" 
-              href="file:///C:/Users/olgaa/OneDrive/Web%20Development/FCC/Javascript/JSProjects/PalindromeChecker/PalindromeChecker.html"
+              href="https://olgabak.github.io/open-palindrome-checker/"
               target="_blank">
                 <img 
-                  src="file:///C:\Users\olgaa\OneDrive\Изображения\Screenshots\Palyndrome_Checker.png" 
+                  src="Palyndrome_Checker.png" 
                   width="280"
                   height="350"
                   class="card-img-top"
@@ -51,7 +51,7 @@
               <div class="card-body">
                 <h6 class="card-title">
                   <p>
-                    <a href="file:///C:/Users/olgaa/OneDrive/Web%20Development/FCC/Javascript/JSProjects/PalindromeChecker/PalindromeChecker.html"
+                    <a href="https://olgabak.github.io/open-palindrome-checker/"
                     target="_blank"
                     class="card-link">
                     Palyndrome Checker Page
@@ -65,7 +65,7 @@
             <div class="card" style="width:14rem;">
               <a href="https://olgabak.github.io/open-product-landing-page/" target="_blank" class="card-link">
                 <img 
-                  src="file://C:\Users\olgaa\OneDrive\Изображения\Screenshots\WIFA.png" 
+                  src="WIFA.png" 
                   width="280"
                   height="350"
                   class="card-img-top"
@@ -88,7 +88,7 @@
   </div>
 
       <div class="d-grid mx-auto my-auto justify-content-center">
-        <a class="btn btn-primary" href="file://C:\Users\olgaa\Documents\Web Development\Web-site\Olga_Abakumova_more_projects_2.html">
+        <a class="btn btn-primary" href="more-projects-two.html">
           Show more
         </a>
       </div> 
