--- a/more-projects-two.html
+++ b/more-projects-two.html
@@ -15,7 +15,7 @@
                  <div class="card" style="width:14rem;">
                    <a href="https://olgabak.github.io/open-technical-documentation-page/" target="_blank" class="card-link">
                      <img 
-                       src="file://C:\Users\olgaa\OneDrive\Изображения\Screenshots\Python.png" 
+                       src="Python.png" 
                        width="280"
                        height="350"
                        class="card-img-top"
@@ -120,7 +120,7 @@
          </div>
 
          <div class="d-grid mx-auto my-auto justify-content-center">
-            <a class="btn btn-primary" href="file://C:\Users\olgaa\Documents\Web Development\Web-site\Olga_Abakumova_main_page.html">
+            <a class="btn btn-primary" href="index.html">
               < Go Back
             </a>
           </div> 
