--- a/more-projects-two.html
+++ b/more-projects-two.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <main>
-        <div class="container">
+        <div class="container text-center">
             <div class="card" id="Work">
                <ul class="list-group list-group-flush list-group-horizontal-lg align-items-center">
                 <li class="list-group-item">
