--- a/more-projects-two.html
+++ b/more-projects-two.html
@@ -120,7 +120,7 @@
          </div>
 
          <div class="d-grid mx-auto my-auto justify-content-center">
-            <a class="btn btn-primary" href="https://olgabak.github.io/">
+            <a class="btn btn-primary" href="more-projects-one.html">
               < Go Back
             </a>
           </div> 
